VSE crops video if horizontal resolution isn't divisible by 8 #47724

Closed
opened 2016-03-08 16:11:10 +01:00 by Paul R · 11 comments

System Information
SUSE Linux Leap 42.1
NVidia GTX 560ti (official drivers)

Blender Version
Broken: 2.76 48f7dd6
Worked: hasn't worked at least as far back as 2.60

Short description of error
Video clips with a horizontal resolution not cleanly divisible by 8 are cropped on the right side by about 6px. Vertical resolution doesn't seem limited to multiples of 8.

Exact steps for others to reproduce the error

  • open attached vse_video_resolution_crop.blend (project resolution already set to 854x480 16:9)
  • add attached 854x480_16x9_chart.mp4
  • make sure VSE preview is 1:1 view
  • right side is cropped by ~6px

vse_video_resolution_crop.blend
854x480_16x9_chart.mp4

**System Information** SUSE Linux Leap 42.1 NVidia GTX 560ti (official drivers) **Blender Version** Broken: 2.76 48f7dd6 Worked: hasn't worked at least as far back as 2.60 **Short description of error** Video clips with a horizontal resolution not cleanly divisible by 8 are cropped on the right side by about 6px. Vertical resolution doesn't seem limited to multiples of 8. **Exact steps for others to reproduce the error** - open attached vse_video_resolution_crop.blend (project resolution already set to 854x480 16:9) - add attached 854x480_16x9_chart.mp4 - make sure VSE preview is 1:1 view - right side is cropped by ~6px [vse_video_resolution_crop.blend](https://archive.blender.org/developer/F289048/vse_video_resolution_crop.blend) [854x480_16x9_chart.mp4](https://archive.blender.org/developer/F289049/854x480_16x9_chart.mp4)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @intracube

Added subscriber: @intracube
Author

Example:
blender_vse_video_crop_bug.png

Example: ![blender_vse_video_crop_bug.png](https://archive.blender.org/developer/F289050/blender_vse_video_crop_bug.png)

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Sergey Sharybin was assigned by Campbell Barton 2016-03-09 03:35:42 +01:00
Author

if it helps track down the issue;

The number of cropped pixels is exactly the remainder after dividing the video width by 8.
blender_vse_bug_crop_right_edge_02.mp4

if it helps track down the issue; The number of cropped pixels is exactly the remainder after dividing the video width by 8. [blender_vse_bug_crop_right_edge_02.mp4](https://archive.blender.org/developer/F289162/blender_vse_bug_crop_right_edge_02.mp4)

Note that VLC and MPlayer can load this video properly.

Note that VLC and MPlayer can load this video properly.

This issue was referenced by 606f6b79ea

This issue was referenced by 606f6b79eabca236b933dd76e5425162e26ba105

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Unfortunately the patch has introduced some weirdness with the CbCr up-scaling. See #47766

Unfortunately the patch has introduced some weirdness with the CbCr up-scaling. See #47766

This issue was referenced by 9ddd83cec2

This issue was referenced by 9ddd83cec215bffcde001ed88d6c7e2e762053ff

This issue was referenced by 7ab2e73494

This issue was referenced by 7ab2e73494097bcadc7738ae7aed9c201573cdb2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47724
No description provided.